# mcp-server-postgres

./: .env  README.md  db.py  main.py  pyproject.toml
module/: context.py  executor.py  nl2sql.py  schema.py
