[project]
name = "mcp-server-postgres"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "email-validator>=2.0",
    "fastapi>=0.115.12",
    "openai>=1.75.0",
    "psycopg2>=2.9.10",
    "uvicorn>=0.34.2",
]
